                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) authn/z: Convert common provider version strings to macros.
     [Chris Darroch]

  *) http_filters: Don't return 100-continue on redirects. PR 43711
     [Ruediger Pluem]

  *) ab: Make ab.c compile on VC6. PR 45024 [Ruediger Pluem]

  *) configure: Don't reject libtool 2.x
     PR 44817 [Arfrever Frehtes Taifersar Arahesis <Arfrever.FTA gmail.com>]

  *) suexec: When group is given as a numeric gid, validate it by looking up
     the actual group name such that the name can be used in log entries.
     PR 7862 [<y-koga apache.or.jp>, Leif W <warp-9.9 usa.net>]

  *) ab: Improve client performance by clearing connection pool instead
     of destroying it. PR 40054 [Brad Roberts <braddr puremagic.com>]

  *) ab: Don't stop sending a request if EAGAIN is returned, which
     will only happen if both the write and subsequent wait are
     returning EAGAIN, and count posted bytes correctly when the initial
     write of a request is not complete. PR 10038, 38861, 39679
     [Patrick McManus <mcmanus datapower.com>,
      Stefan Fleiter <stefan.fleiter web.de>,
      Davanum Srinivas, Roy T. Fielding]

  *) ab: Overhaul stats collection and reporting to avoid integer
     truncation and time divisions within the test loop, retain
     native time resolution until output, remove unused data,
     consistently round milliseconds, and generally avoid losing
     accuracy of calculation due to type casts. PR 44878, 44931.
     [Roy T. Fielding]

  *) core: When testing for slash-terminated configuration paths in
     ap_location_walk(), don't look past the start of an empty string
     such as that created by a <Location ""> directive.
     [Chris Darroch]

  *) core, mod_proxy: If a kept_body is present, it becomes safe for
     subrequests to support message bodies. Make sure that safety